--- a/_output/datasets/eleicoes_europeias.html
+++ b/_output/datasets/eleicoes_europeias.html
@@ -1,3 +1,31 @@
+<!DOCTYPE html>
+<html>
+	<head>
+			<meta charset="utf-8"> 
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+			<title>Central de dados</title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="/css/main.css">
+	</head>
+	<body>
+		<nav class="nav row">
+			<div>
+				<ul>
+				  <li><a href="#">Acerca</a></li>
+				  <li><a href="#">FAQ</a></li>
+				</ul>
+			</div>
+		</nav>
+		<header class="header row">
+			<div>
+				<h1><img src="media/img/centraldedados.png" alt="Central de Dados" /></h1>
+				<p>A Central de Dados é um sítio lorem ipsum sit amet e por aí adiante.</p>
+			</div>
+		</header>
+		<section class="row">
+			<div>
+				
 <h1>Eleições Europeias</h1>
 
 <h3>Resultados eleitorais das eleições para o Parlamento Europeu, com informação ao nível de distrito.</h3>
@@ -17,3 +45,18 @@
   <li>eleicoes_europeias/data/pe_2004.csv</li>
 
 </ul>
+
+			</div>
+		</section>
+		<footer class="footer row">
+			<div>
+				<ul>
+					<li><h4><a rel="external" href="#">Transparência Hackday</a></h4> com</a></li>
+					<li><h4>Apoio:</h4> <a rel="external" href="#">Journalism++</a></li>
+					<li><h4>Parceiros:</h4> <a rel="external" href="#">AMA, Agência para a Modernização</a></li>
+				</ul>
+			</div>
+		</footer>
+		<script src="/js/vendor/jquery-1.11.0.min.js"></script>
+	</body>
+</html>
